--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./header.css">
+   
     <link rel="stylesheet" href="./order.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -81,12 +81,7 @@
         <div class="header-menu">
 
             <div class="header-menu-option " onclick="headerOptionClick(event)" onmouseover="displayCategory()" onmouseout="hideCategory()">
-                <div class="menu-text">Dogs</div>
-                <div class="menu-icon"><i class="fa-solid fa-angle-down"></i></div>
-            </div>
-
-            <div class="header-menu-option" onclick="headerOptionClick(event)" onmouseover="displayCategory()" onmouseout="hideCategory()">
-                <div class="menu-text">Cats</div>
+                <div class="menu-text">Products</div>
                 <div class="menu-icon"><i class="fa-solid fa-angle-down"></i></div>
             </div>
 
@@ -104,19 +99,16 @@
                 <div class="menu-text">Content Hub</div>
                 <div class="menu-icon"><i class="fa-solid fa-angle-down"></i></div>
             </div>
-            <!--
-            <div class="header-menu-option" onclick="headerOptionClick(event)">
-                <div class="menu-text">Pages</div>
+
+            <div class="header-menu-option" onclick="headerOptionClick(event)" onmouseover="displayCategory()" onmouseout="hideCategory()">
+                <div class="menu-text">Offers</div>
                 <div class="menu-icon"><i class="fa-solid fa-angle-down"></i></div>
             </div>
-            <div class="header-menu-option" onclick="headerOptionClick(event)">
-                <div class="menu-text">Blog</div>
+
+            <div class="header-menu-option" onclick="headerOptionClick(event)" onmouseover="displayCategory()" onmouseout="hideCategory()">
+                <div class="menu-text">Contact</div>
                 <div class="menu-icon"><i class="fa-solid fa-angle-down"></i></div>
             </div>
-            <div class="header-menu-option" onclick="headerOptionClick(event)">
-                <div class="menu-text">Contact Us</div>
-                <div class="menu-icon"><i class="fa-solid fa-angle-down" style="color: whitesmoke;"></i></div>
-            </div> -->
 
         </div>
     </header>
@@ -126,21 +118,36 @@
 
     <section class="hero-container">
 
-        <div class="carousel">
+        <!-- <div class="carousel">
             <div class="carousel_inner">
                <div class="carousel_item carousel_item__active">
                   <img src="./img/img1.jpg" alt="" class="carousel_img">
+                  <div class="carousel_caption">
+                    <h1 class="carousel_title">Change It As You See Fit</h1>
+                    <p class="carousel_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cupiditate
+                       corporis laudantium quae velit quam.</p>
+                 </div>
                </div>
                <div class="carousel_item">
                   <img src="./img/img2.jpg" alt="" class="carousel_img">
+                  <div class="carousel_caption">
+                    <h1 class="carousel_title">Change It As You See Fit</h1>
+                    <p class="carousel_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cupiditate
+                       corporis laudantium quae velit quam.</p>
+                 </div>
                </div>
                <div class="carousel_item">
                   <img src="./img/img3.jpg" alt="" class="carousel_img">
+                  <div class="carousel_caption">
+                    <h1 class="carousel_title">Change It As You See Fit</h1>
+                    <p class="carousel_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cupiditate
+                       corporis laudantium quae velit quam.</p>
+                 </div>
                </div>
             </div>
-         </div>
+         </div> -->
 
-        <!-- <div class="banner-container">
+        <div class="banner-container">
             <img src="./assets/hero_banner2.png" alt="" data-orientation="landscape" data-legacy="true">
         </div>
 
@@ -158,7 +165,7 @@
                 </div>
                 <div class="arrow" id="arrow"><i class="fa-solid fa-angle-right"></i></div>
             </div>
-        </a> -->
+        </a>
 
     </section>
 
